<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activities.connection.ConnectionActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="2dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="Connection"
        app:titleTextColor="@color/black" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbarSize="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:animateLayoutChanges="true">

                <LinearLayout
                    android:id="@+id/connect_with_google_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="5dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/gray" />

                    <TextView
                        android:id="@+id/dt1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center|start"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="5dp"
                        android:text="@string/d_connect_to_google"
                        android:textColor="@color/light_black" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/connected_to_google_ll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="50dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingHorizontal="16dp"
                            android:paddingVertical="10dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_android_black_24dp" />

                            <ImageView
                                android:layout_width="10dp"
                                android:layout_height="10dp"
                                android:layout_marginHorizontal="5dp"
                                android:src="@drawable/ic_connector" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_google" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="5dp"
                            android:layout_height="match_parent"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="5dp"
                            android:background="@color/gray" />

                        <TextView
                            android:id="@+id/dt3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center|start"
                            android:paddingHorizontal="8dp"
                            android:paddingVertical="5dp"
                            android:text="@string/d_connected_to_google"
                            android:textColor="@color/light_black" />

                        <View
                            android:layout_width="5dp"
                            android:layout_height="match_parent"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="5dp"
                            android:background="@color/gray" />

                    </LinearLayout>

                </LinearLayout>
            </FrameLayout>


            <Button
                android:id="@+id/connect_with_google_bt"
                style="@style/button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="5dp"
                android:drawableLeft="@drawable/ic_google"
                android:text="@string/connect" />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:animateLayoutChanges="true">

                <LinearLayout
                    android:id="@+id/connect_with_spread_sheet_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="5dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/gray" />

                    <TextView
                        android:id="@+id/dt2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center|start"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="5dp"
                        android:text="@string/d_connect_to_spread_sheet"
                        android:textColor="@color/light_black" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/connected_to_spread_sheet_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="50dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:paddingHorizontal="16dp"
                            android:paddingVertical="10dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_android_black_24dp" />

                            <ImageView
                                android:layout_width="10dp"
                                android:layout_height="10dp"
                                android:layout_marginHorizontal="5dp"
                                android:src="@drawable/ic_connector" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_spread_sheet" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="5dp"
                            android:layout_height="match_parent"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="5dp"
                            android:background="@color/gray" />

                        <TextView
                            android:id="@+id/dt4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center|start"
                            android:paddingHorizontal="8dp"
                            android:paddingVertical="5dp"
                            android:text="@string/d_connected_to_sheet"
                            android:textColor="@color/light_black" />

                        <View
                            android:layout_width="5dp"
                            android:layout_height="match_parent"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="5dp"
                            android:background="@color/gray" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:animateLayoutChanges="true"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <TextView
                            android:id="@+id/disconnect_bt"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="16dp"
                            android:layout_marginVertical="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/ripple_button"
                            android:elevation="2dp"
                            android:paddingVertical="10dp"
                            android:text="@string/disconnect"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/change_sheet_bt"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="16dp"
                            android:layout_marginVertical="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/ripple_button"
                            android:elevation="2dp"
                            android:paddingVertical="10dp"
                            android:text="@string/change_sheet"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textStyle="bold" />


                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/sheet_title_rv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:overScrollMode="never"
                        android:scrollbarSize="0dp"
                        android:visibility="gone"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:spanCount="2"
                        tools:itemCount="4"
                        tools:listitem="@layout/adapter_sheet_title" />
                </LinearLayout>
            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/spread_sheet_id_il"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="10dp"
                android:enabled="false"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/gray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/spread_sheet_id_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/spreadsheet_id"
                    android:inputType="text"
                    android:text=""
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"
                    app:boxStrokeColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/connect_with_spread_sheet_bt"
                style="@style/button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="5dp"
                android:drawableLeft="@drawable/ic_spread_sheet"
                android:text="@string/connect" />

            <LinearLayout
                android:id="@+id/details_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <View
                        android:layout_width="5dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="5dp"
                        android:background="@color/gray" />

                    <TextView
                        android:id="@+id/dt5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center|start"
                        android:paddingHorizontal="8dp"
                        android:paddingVertical="5dp"
                        android:text="@string/d_all_set"
                        android:textColor="@color/light_black" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>